phoromatic: Allow binary log file uploads by default when Phoromatic Server is 10.8+
phoromatic: Input sanitization updates for Phoromatic Server
phoromatic: Move "Create A Test Profile" page behind an opt-in rootadmin Phoromatic Server option
phoromatic: Log update script output
phodevi: Use "-NoProfile" with powershell for possible performance benefits

Phoronix Test Suite 10.8.0
25 December 2021

pts-core: Remaining PHP 8.1 warnings/fixes addressed
pts-core: Various macOS 12 warning fixes
pts-core: Allow using OUTPUT_DIR / OUTPUT_FILE environment variables to control result-file-to* sub-commands
pts-core: Improved JSON output generation, add option to the result viewer
pts-core: Add result-file-to-html sub-command and simple inline HTML result output option from result viewer
pts-core: Allow sorting results by test date/time
pts-core: Add TEST_EXECUTION_SORT environment variable to allow sorting test run order in more ways
pts-core: Consolidate/centralize handling of environment variable options to pts_env
pts-core: Add remove-incomplete-results-from-result-file helper command to remove results with incomplete or missing data
pts-core: Add REMOVE_TESTS_ON_COMPLETION environment variable as another way to have tests auto-uninstall/remove after running
pts-core: Improved test installation / test run-time error reporting and detection
pts-core: Allow recording/archiving install and runtime errors within installation metadata
pts-core: Add list-failed-installs sub-command for showing tests that failed to install
pts-core: Add list-test-errors sub-command for showing test run-time errors
pts-core: Add variables sub-command for showing environment variable descriptions and what is set
pts-core: Dynamic detection of Windows download folder location
pts-core: Improved Zip handling on Windows
phodevi: Add detection for Arm Cortex-A710 and Neoverse-N2 cores
phodevi: Add detection for AMD Zen 4 cores
phodevi: Add detection for Intel Raptor Lake