@@ -8,6 +8,7 @@ phoromatic: Input sanitization updates for Phoromatic Server
 phoromatic: Move "Create A Test Profile" page behind an opt-in rootadmin Phoromatic Server option
 phoromatic: Log update script output
 phodevi: Use "-NoProfile" with powershell for possible performance benefits
+phodevi: Avoid including kernel version in Mesa/OpenGL string
 
 Phoronix Test Suite 10.8.0
 25 December 2021
